--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -288,42 +288,42 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon1"></i>Digital Marketing </div>
+                        <div class="service-title"><i class="dw dw-icon1"></i>Influencer Marketing </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon2"></i>Social Events</div>
+                        <div class="service-title"><i class="dw dw-icon2"></i>Social Media Management</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon3"></i>Outdoor Media</div>
+                        <div class="service-title"><i class="dw dw-icon3"></i>Video Production</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon4"></i>Retail Branding</div>
+                        <div class="service-title"><i class="dw dw-icon4"></i>Graphic Design</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon5"></i>Celebrity Management</div>
+                        <div class="service-title"><i class="dw dw-icon5"></i>Web Development</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon6"></i>ATL and BTL Marketing</div>
+                        <div class="service-title"><i class="dw dw-icon6"></i>Digital Advertising</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
