--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <span class="toggle-icon ti3"></span>
                     </div>
                     <div class="col-md-3">
-                        <a href="index.html"><img class="logo" src="images/triveni.png" height="100" width="auto" alt="Triveni Events" /></a>
+                        <a href="index.html"><img class="logo" src="images/loo.png" height="100" width="auto" alt="logo" /></a>
                     </div>
                     <div class="col-md-9 menu-col">
                         <div id="menu-holder">
@@ -88,7 +88,7 @@
                             <div class="textover text-animate-in-out text-animate-in-out-delay1">Tagline 2</div>
                             <div class="textover text-animate-in-out text-animate-in-out-delay2">Tagline3</div>
                         </div>
-                        <h1 class="headline">the only Event Co you’ll ever need.</h1>
+                        <h1 class="headline">the only Co you’ll ever need.</h1>
                     </div>
                 </div>
                 <div class="row row2">
@@ -138,12 +138,12 @@
             <div class="row">
                 <div class="col-xs-12 col-md-5 info-text-holder">
                     <div><div class="top-line"></div></div>
-                    <h3>About Talenkit</h3>
+                    <h3>About us</h3>
                     <p>lorum lipsum
-                    Whether there is a need for an unconventional event or a wish to break free from the norms, we will assist you in providing world class experiences through matchless expertise. </p>
-                    <p>From providing a real life Disney escapade to practising a robust course of action, we believe in bringing our innovation & creativity to you. With a hands - on experience of over 15 years, we have seen our dream come true in the satisfied faces of our clients.</p>
-                    <p>Since 2005, Triveni Events is one of the best known names in the experiential space in India as we have continued to create alluring moments crafted skillfully by our team of professionals with uncompromising standards.</p>
-                    <p>We are headquartered in India with operational offices in Singapore and Dubai and our team of professionals assist in executing work worldwide as per the requirements of our clients.</p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at purus convallis augue viverra sollicitudin ac vitae turpis. Etiam efficitur venenatis urna in aliquam. Maecenas cursus orci quis velit dignissim elementum. Proin fermentum arcu ante, vitae venenatis odio pharetra ut. </p>
+                    <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet. Nunc pharetra sem velit, vel ultrices nibh rutrum vel. Pellentesque ut urna urna. Quisque sagittis enim ac nunc iaculis, vitae porta mi ultricies. Donec arcu justo, viverra nec tortor lobortis, volutpat finibus ante.</p>
+                    <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet. Nunc pharetra sem velit, vel ultrices nibh rutrum vel. Pellentesque ut urna urna. Quisque sagittis enim ac nunc iaculis, vitae porta mi ultricies. Donec arcu justo, viverra nec tortor lobortis, volutpat finibus ante.</p>
+                    <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet.</p>
                 </div>
                 <div class="col-xs-12 col-md-7">
                     <div class="offices-slider">
@@ -281,7 +281,7 @@
             <div class="row">
                 <div class="col-xs-12 title-holder">
                     <h3>Our Services</h3>
-                    <p><strong>Triveni Events </strong>Offers Multi - Disciplinary Services</p>
+                    <p><strong>text....</strong> Suspendisse at arcu augue</p>
                 </div>
             </div>
             <div class="row">
@@ -342,12 +342,12 @@
                     <div class="testimonials-slider">
                         <div>
                             <img src="images/person1.jpg" alt="">
-                            <h4>Ankit Talan</h4>
+                            <h4>Rajesh Yadav</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
                         </div>
                         <div>
                             <img src="images/person2.jpg" alt="">
-                            <h4>Rajesh</h4>
+                            <h4>Ankit Talan</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
                         </div>
                     </div>
