--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <p>lorum lipsum
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at purus convallis augue viverra sollicitudin ac vitae turpis. Etiam efficitur venenatis urna in aliquam. Maecenas cursus orci quis velit dignissim elementum. Proin fermentum arcu ante, vitae venenatis odio pharetra ut. </p>
                     <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet. Nunc pharetra sem velit, vel ultrices nibh rutrum vel. Pellentesque ut urna urna. Quisque sagittis enim ac nunc iaculis, vitae porta mi ultricies. Donec arcu justo, viverra nec tortor lobortis, volutpat finibus ante.</p>
-                    <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet. Nunc pharetra sem velit, vel ultrices nibh rutrum vel. Pellentesque ut urna urna. Quisque sagittis enim ac nunc iaculis, vitae porta mi ultricies. Donec arcu justo, viverra nec tortor lobortis, volutpat finibus ante.</p>
+                    <p> Suspendisse at arcu augue.</p>
                     <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet.</p>
                 </div>
                 <div class="col-xs-12 col-md-7">
