--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
                 <div class="row row1">
                     <div class="col-xs-12">
                         <div class="big-title">
-                            <div class="textover text-animate-in-out">Tagline 1</div>
-                            <div class="textover text-animate-in-out text-animate-in-out-delay1">Tagline 2</div>
-                            <div class="textover text-animate-in-out text-animate-in-out-delay2">Tagline3</div>
+                            <div class="textover text-animate-in-out text-animate-in-out-delay1">Advertising doesn't connect your brand to customers</div>
+                            <div class="textover text-animate-in-out text-animate-in-out-delay2">Stories do!</div>
                         </div>
-                        <h1 class="headline">the only Co you’ll ever need.</h1>
+                        <h1 class="headline">Lets us create a story that will help you in creating a digital impact for your brand.</h1>
                     </div>
                 </div>
                 <div class="row row2">
@@ -139,11 +138,8 @@
                 <div class="col-xs-12 col-md-5 info-text-holder">
                     <div><div class="top-line"></div></div>
                     <h3>About us</h3>
-                    <p>lorum lipsum
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at purus convallis augue viverra sollicitudin ac vitae turpis. Etiam efficitur venenatis urna in aliquam. Maecenas cursus orci quis velit dignissim elementum. Proin fermentum arcu ante, vitae venenatis odio pharetra ut. </p>
-                    <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet. Nunc pharetra sem velit, vel ultrices nibh rutrum vel. Pellentesque ut urna urna. Quisque sagittis enim ac nunc iaculis, vitae porta mi ultricies. Donec arcu justo, viverra nec tortor lobortis, volutpat finibus ante.</p>
-                    <p> Suspendisse at arcu augue.</p>
-                    <p> Suspendisse at arcu augue. Sed velit sapien, venenatis viverra mauris quis, suscipit egestas velit. Ut pharetra gravida aliquet.</p>
+                    <br>
+                    <p>We are bunch of young and passionate individuals, who loves to bring out the best in whatever we do. We have created many stories in our own lives and now strive to help you in creating your stories. Along the way we help people create a community that supports then throughout their journey.</p>
                 </div>
                 <div class="col-xs-12 col-md-7">
                     <div class="offices-slider">
@@ -160,19 +156,22 @@
                 <div class="col-xs-12 col-md-4">
                     <div class="info-box">
                         <h4>Who</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut vehicula ante. Donec turpis est, pulvinar sed ipsum sed, hendrerit blandit mauris. Cras egestas eget augue vel pulvinar.</p>
+                           <br>
+                        <p>We had created not just one, but  many such communities across different platforms</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <div class="info-box">
                         <h4>Why</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut vehicula ante. Donec turpis est, pulvinar sed ipsum sed, hendrerit blandit mauris. Cras egestas eget augue vel pulvinar.</p>
+                           <br>
+                        <p>It’s all about experiences. Building stories that will connect you with maximum visibility defines us.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <div class="info-box">
                         <h4>What we do.</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut vehicula ante. Donec turpis est, pulvinar sed ipsum sed, hendrerit blandit mauris. Cras egestas eget augue vel pulvinar.</p>
+                        <br>
+                        <p>We push ourselves to great lengths to understand what matters on digital and what doesn’t .</p>
                     </div>
                 </div>
             </div>
@@ -281,49 +280,49 @@
             <div class="row">
                 <div class="col-xs-12 title-holder">
                     <h3>Our Services</h3>
-                    <p><strong>text....</strong> Suspendisse at arcu augue</p>
+                    <p><strong>We are one stop media agency that takes care of everything that your brand will need from  Video Production, Social Media Management , Influencer Marketing to much more.</strong></p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon1"></i>Influencer Marketing </div>
+                        <div class="service-title"><i class="dw dw-icon1"></i>Social Media Marketing</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon2"></i>Social Media Management</div>
+                        <div class="service-title"><i class="dw dw-icon2"></i>Video Marketing</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon3"></i>Video Production</div>
+                        <div class="service-title"><i class="dw dw-icon3"></i>Media Buying</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon4"></i>Graphic Design</div>
+                        <div class="service-title"><i class="dw dw-icon4"></i>Content Marketing</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon5"></i>Web Development</div>
+                        <div class="service-title"><i class="dw dw-icon5"></i>Creative</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="service-box">
                         <div class="service-box-bg"></div>
-                        <div class="service-title"><i class="dw dw-icon6"></i>Digital Advertising</div>
+                        <div class="service-title"><i class="dw dw-icon6"></i>Web Design & Devolopment</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget.</p>
                     </div>
                 </div>
@@ -334,7 +333,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 title-holder">
-                    <h3>Founder's</h3>
+                    <h3>Our Team</h3>
+                    <p><strong>Decoding Some of the Best Services</strong></p>
                 </div>
             </div>
             <div class="row">
@@ -342,12 +342,27 @@
                     <div class="testimonials-slider">
                         <div>
                             <img src="images/person1.jpg" alt="">
-                            <h4>Rajesh Yadav</h4>
+                            <h4>Rajesh Yadav, Co-Founder</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
                         </div>
                         <div>
                             <img src="images/person2.jpg" alt="">
-                            <h4>Ankit Talan</h4>
+                            <h4>Ankit Talan, Co-Founder</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
+                        </div>
+                         <div>
+                            <img src="images/person2.jpg" alt="">
+                            <h4>Nikhil, Visual Artist </h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
+                        </div>
+                         <div>
+                            <img src="images/person2.jpg" alt="">
+                            <h4>Sharad, Social Media Manager</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
+                        </div>
+                         <div>
+                            <img src="images/person2.jpg" alt="">
+                            <h4>Aditya, Digital Marketing</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas non ante non consequat. Aenean accumsan eros vel elit tristique, non sodales nunc luctus. Etiam vitae odio eget orci finibus auctor ut eget magna.</p>
                         </div>
                     </div>
